--- a/force-app/main/default/lwc/entryScreen/entryScreen.html
+++ b/force-app/main/default/lwc/entryScreen/entryScreen.html
@@ -1,12 +1,14 @@
 <template>
     <div class="header-section">
         <div class="logo-container">
-            <p class="logo">
-                WanderBuddy
-                <span class="dot green">•</span>
-                <span class="dot yellow">•</span>
-                <span class="dot red">•</span>
-            </p>
+            <div class="logo">
+                <p class="title">WanderBuddy</p>
+                <p>
+                    <span class="dot green">•</span>
+                    <span class="dot yellow">•</span>
+                    <span class="dot red">•</span>
+                </p>
+            </div>
         </div>
     </div>
     <div class="img-section">
