--- a/force-app/main/default/lwc/trends/trends.html
+++ b/force-app/main/default/lwc/trends/trends.html
@@ -1,5 +1,5 @@
 <template>
-    <p class="title">Trends</p>
+    <p class="screen-title">Trends</p>
     <c-destination-trends></c-destination-trends>
     <c-monthly-travel-trends></c-monthly-travel-trends>
     <c-travel-activity-trends></c-travel-activity-trends>
