--- a/force-app/main/default/lwc/audience/audience.html
+++ b/force-app/main/default/lwc/audience/audience.html
@@ -1,43 +1,49 @@
 <template>
+    <p class="screen-title">Audience</p>
     <div class="slds-grid slds-wrap slds-grid_vertical-align-start full-height">
         <div class="audience slds-size_1-of-1 slds-grid slds-wrap slds-grid_vertical-align-start">
-            <div class="slds-col slds-size_1-of-1 slds-text-align_center title screen-head">Audience</div>
-            <div class="slds-col slds-size_1-of-2 slds-text-align_center slds-m-top_medium">
-                Followers </br> <span class="audienceDataValue">50k</span>
+            <div class="slds-col metrics-col slds-size_1-of-2 slds-text-align_center">
+                <p class="metric-label">Followers</p>
+                <p class="audienceDataValue">60k</p>
             </div>
-            <div class="slds-col slds-size_1-of-2 slds-text-align_center slds-m-top_medium">
-                Male </br> <span class="audienceDataValue">50k</span>
+            <div class="slds-col metrics-col slds-size_1-of-2 slds-text-align_center">
+                <p class="metric-label">Male</p>
+                <p class="audienceDataValue">22k</p>
             </div>
-            <div class="slds-col slds-size_1-of-2 slds-text-align_center slds-m-top_medium">
-                Avg age </br> <span class="audienceDataValue">50k</span>
+            <div class="slds-col metrics-col slds-size_1-of-2 slds-text-align_center">
+                <p class="metric-label">Avg. age</p>
+                <p class="audienceDataValue">25y</p>
             </div>
-            <div class="slds-col slds-size_1-of-2 slds-text-align_center slds-m-top_medium">
-                Female </br> <span class="audienceDataValue">50k</span>
+            <div class="slds-col metrics-col slds-size_1-of-2 slds-text-align_center">
+                <p class="metric-label">Female</p>
+                <p class="audienceDataValue">38k</p>
             </div>
+        </div>
+        <div class="slds-col slds-size_1-of-1 audience-geography">
+            <c-audience-geography></c-audience-geography>
         </div>
         <div class="slds-col slds-size_1-of-1 slds-grid slds-wrap bloggers-overlap">
-            <div class="slds-col slds-size_1-of-1 slds-text-align_center title">Audience Overlap</div>
-            <c-blogger-overlap-card
-                    class="slds-size_1-of-3"
-                    img-src={person1ImageUrl}
-                    name="John Dou"
-                    value="67 %"
-            ></c-blogger-overlap-card>
-            <c-blogger-overlap-card
-                    class="slds-size_1-of-3"
-                    img-src={person2ImageUrl}
-                    name="Alisa Juhre"
-                    value="66 %"
-            ></c-blogger-overlap-card>
-            <c-blogger-overlap-card
-                    class="slds-size_1-of-3"
-                    img-src={person3ImageUrl}
-                    name="Marie Ascqeer"
-                    value="39 %"
-            ></c-blogger-overlap-card>
-        </div>
-        <div class="slds-col slds-size_1-of-1 slds-text-align_center audience-geography">
-            <c-audience-geography></c-audience-geography>
+            <div class="slds-col slds-size_1-of-1 title">Shared Audience</div>
+            <div class="blogger-cards-wrapper">
+                <c-blogger-overlap-card
+                        class="slds-size_1-of-3"
+                        img-src={person1ImageUrl}
+                        name="John Dou"
+                        value="67 %"
+                ></c-blogger-overlap-card>
+                <c-blogger-overlap-card
+                        class="slds-size_1-of-3"
+                        img-src={person2ImageUrl}
+                        name="Alisa Juhre"
+                        value="66 %"
+                ></c-blogger-overlap-card>
+                <c-blogger-overlap-card
+                        class="slds-size_1-of-3"
+                        img-src={person3ImageUrl}
+                        name="Marie Ascqeer"
+                        value="39 %"
+                ></c-blogger-overlap-card>
+            </div>
         </div>
     </div>
 </template>
