WIP progress for TOUR GPT Page

--- a/force-app/main/default/lwc/tourGPT/tourGPT.html
+++ b/force-app/main/default/lwc/tourGPT/tourGPT.html
@@ -3,23 +3,36 @@
         <div class="tour-props slds-size_1-of-1 slds-grid slds-wrap slds-grid_vertical-align-start">
             <div class="slds-col slds-size_1-of-1 slds-text-align_center title screen-head">Tour GPT</div>
             <div class="slds-col slds-size_1-of-1 slds-text-align_left slds-m-top_medium slds-p-left_medium">
-                Destination
+                Destination </br>
+                <span class="property-value"> Portugal </span>
             </div>
             <div class="slds-col slds-size_1-of-1 slds-text-align_left slds-m-top_medium slds-p-left_medium">
-                Month
+                Month</br>
+                <span class="property-value"> April </span>
             </div>
             <div class="slds-col slds-size_1-of-1 slds-text-align_left slds-m-top_medium slds-p-left_medium">
-                Number of People
+                Number of People </br>
+                <span class="property-value"> 10 </span>
             </div>
             <div class="slds-col slds-size_1-of-1 slds-text-align_left slds-m-top_medium slds-p-left_medium">
-                Activities
+                Activities </br>
+                <span class="property-value"> Sightseeing, hiking, bars, sunsets, culture, local food </span>
             </div>
         </div>
         <div class="slds-col slds-size_1-of-1 slds-grid slds-wrap probablity">
-            <div class="probability-circle"></div>
+            <div class="slds-size_1-of-1 probability-circle neon-box">
+                <div class="circle-number ">80 %</div>
+            </div>
+            <div class="slds-size_1-of-1 slds-text-align_center circle-title">High Probablity to gather 10 people</div>
         </div>
-        <div class="slds-col slds-size_1-of-1 slds-m-top_medium slds-p-left_medium recommendations">
-            Recommendations:
+        <div class="slds-col slds-size_1-of-1 slds-m-top_large slds-p-left_medium recommendations">
+            Recommendations: </br>
+            <div class="recommendations-list">
+                <div class="recommendation-item"><span class="recommendation-item-text">Consider adding night
+                        activities</span></div>
+                <div class="recommendation-item"><span class="recommendation-item-text">Include enough time for self
+                        leisure</span></div>
+            </div>
         </div>
     </div>
 </template>
