Adjusted styles of Audience screen

--- a/force-app/main/default/lwc/audience/audience.html
+++ b/force-app/main/default/lwc/audience/audience.html
@@ -1,22 +1,32 @@
 <template>
     <p class="screen-title">Audience</p>
     <div class="slds-grid slds-wrap slds-grid_vertical-align-start full-height">
-        <div class="audience slds-size_1-of-1 slds-grid slds-wrap slds-grid_vertical-align-start">
-            <div class="slds-col metrics-col slds-size_1-of-2 slds-text-align_center">
+        <div class="audience">
+            <div class="metrics-col slds-text-align_center">
                 <p class="metric-label">Followers</p>
-                <p class="audienceDataValue">60k</p>
+                <p class="audienceDataValue followers">60k</p>
             </div>
-            <div class="slds-col metrics-col slds-size_1-of-2 slds-text-align_center">
+            <div class="metrics-col slds-text-align_center">
                 <p class="metric-label">Male</p>
                 <p class="audienceDataValue">22k</p>
             </div>
-            <div class="slds-col metrics-col slds-size_1-of-2 slds-text-align_center">
-                <p class="metric-label">Avg. age</p>
-                <p class="audienceDataValue">25y</p>
-            </div>
-            <div class="slds-col metrics-col slds-size_1-of-2 slds-text-align_center">
+            <div class="metrics-col slds-text-align_center">
                 <p class="metric-label">Female</p>
                 <p class="audienceDataValue">38k</p>
+            </div>
+        </div>
+        <div class="audience">
+            <div class="metrics-col slds-text-align_center">
+                <p class="metric-label">Avg. age</p>
+                <p class="audienceDataValue">25</p>
+            </div>
+            <div class="metrics-col slds-text-align_center">
+                <p class="metric-label">Growth</p>
+                <p class="audienceDataValue">+1.5k</p>
+            </div>
+            <div class="metrics-col slds-text-align_center">
+                <p class="metric-label">Tour Views</p>
+                <p class="audienceDataValue">25k</p>
             </div>
         </div>
         <div class="slds-col slds-size_1-of-1 audience-geography">
