--- a/force-app/main/default/lwc/trip/trip.html
+++ b/force-app/main/default/lwc/trip/trip.html
@@ -23,4 +23,10 @@
             </div>
         </div>
     </div>
+    <div class="navigation-panel">
+        <a href="/s/app-home">App Home</a>
+        <a href="/s/audience">Audience</a>
+        <a href="/s/trends">Trends</a>
+        <a href="/s/tourgpt">Tour GPT</a>
+    </div>
 </template>
