--- a/force-app/main/default/lwc/entryScreen/entryScreen.html
+++ b/force-app/main/default/lwc/entryScreen/entryScreen.html
@@ -14,11 +14,11 @@
     <div class="img-section">
         <img src={imageUrl}>
     </div>
-    <div class="description-section">
+    <!--div class="description-section">
         <p class="title">Uncover Insights Together</p>
         <p class="subtitle">Unlock the power of your audience analytics, discover trending destinations, and effectively analyse ongoing travel demands</p>
     </div>
     <div class="footer-section">
         <button class="begin-btn">Begin</button>
-    </div>
+    </div-->
 </template>
