Added bottom bar

--- a/force-app/main/default/lwc/audience/audience.html
+++ b/force-app/main/default/lwc/audience/audience.html
@@ -55,5 +55,6 @@
                 ></c-blogger-overlap-card>
             </div>
         </div>
+        <c-bottom-bar></c-bottom-bar>
     </div>
 </template>
