--- a/force-app/main/default/lwc/trends/trends.html
+++ b/force-app/main/default/lwc/trends/trends.html
@@ -3,4 +3,5 @@
     <c-destination-trends></c-destination-trends>
     <c-monthly-travel-trends></c-monthly-travel-trends>
     <c-travel-activity-trends></c-travel-activity-trends>
+    <c-bottom-bar></c-bottom-bar>
 </template>
