--- a/force-app/main/default/lwc/travelersPeople/travelersPeople.html
+++ b/force-app/main/default/lwc/travelersPeople/travelersPeople.html
@@ -45,13 +45,13 @@
         <p class="label">Activities</p>
         <!--lightning-input type="search" class="place-input" placeholder="Find people by activity" variant="label-hidden"></lightning-input-->
         <div class="activities-wrap">
-            <div class="activity-tag food">Lisbon</div>
-            <div class="activity-tag hiking">Porto</div>
-            <div class="activity-tag bars">Cabo Da Roca</div>
+            <div class="activity-tag food">Sightseeing</div>
             <div class="activity-tag hiking">Castles</div>
-            <div class="activity-tag sunsets">Surfing</div>
-            <div class="activity-tag food">Local Food</div>
+            <div class="activity-tag bars">Cabo Da Roca</div>
             <div class="activity-tag hiking">Hiking</div>
+            <div class="activity-tag sunsets">Restaurants</div>
+            <div class="activity-tag food">Local Food</div>
+            <div class="activity-tag hiking">Museums</div>
             <div class="activity-tag sunsets">Sunsets</div>
         </div>
     </div>
