Added search icon

--- a/force-app/main/default/lwc/travelersPeople/travelersPeople.html
+++ b/force-app/main/default/lwc/travelersPeople/travelersPeople.html
@@ -42,7 +42,10 @@
         </div>
     </div-->
     <div class="activities-filter">
-        <p class="label">Activities</p>
+        <div class="activities-label">
+            <p class="label">Activities</p>
+            <lightning-icon icon-name="utility:search" size="x-small"></lightning-icon>
+        </div>
         <!--lightning-input type="search" class="place-input" placeholder="Find people by activity" variant="label-hidden"></lightning-input-->
         <div class="activities-wrap">
             <div class="activity-tag food">Sightseeing</div>
