Added Share Costs screen

--- a/force-app/main/default/lwc/travelersChat/travelersChat.html
+++ b/force-app/main/default/lwc/travelersChat/travelersChat.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="footer-section">
-            <lightning-icon icon-name="utility:emoji" size="small" class="send-btn"></lightning-icon>
+            <lightning-icon icon-name="utility:emoji" size="small" class="emoji-btn"></lightning-icon>
             <input type="text" placeholder="Type message..." class="msg-input"></input>
             <lightning-icon icon-name="utility:send" size="x-small" class="send-btn"></lightning-icon>
         </div>
