--- a/force-app/main/default/lwc/travelersEvents/travelersEvents.html
+++ b/force-app/main/default/lwc/travelersEvents/travelersEvents.html
@@ -62,7 +62,7 @@
                 <div class="price">25$</div>
             </div>
             <div class="footer">
-                <p class="source">Posted by <span>Viator</span></p>
+                <p class="source">Posted by <span>GetYourGuide</span></p>
                 <button class="action-btn">Check availability</button>
             </div>
         </div>
@@ -84,7 +84,7 @@
                 <div class="price">40$</div>
             </div>
             <div class="footer">
-                <p class="source">Posted by <span>GetYourGuide</span></p>
+                <p class="source">Posted by <span>LonelyPlanet</span></p>
                 <button class="action-btn">Check availability</button>
             </div>
         </div>
