Adjusted Travelers Entry Screen

--- a/force-app/main/default/lwc/travelersEntryScreen/travelersEntryScreen.html
+++ b/force-app/main/default/lwc/travelersEntryScreen/travelersEntryScreen.html
@@ -17,15 +17,24 @@
     </div>
     <div class="input-section">
         <p class="label">Destination</p>
-        <input type="text" placeholder="Destination" class="destination-input" />
+        <div class="destination-input">
+            <lightning-icon icon-name="utility:checkin" size="x-small"></lightning-icon>
+            <p>Lisbon, Portugal</p>
+        </div>
         <div class="date-inputs">
             <div class="date-input-block">
                 <p class="label">Start Date</p>
-                <input type="date" class="date-input" placeholder="Start Date" />
+                <div class="date-input">
+                    <p>Jul 17, 2024</p>
+                    <lightning-icon icon-name="utility:event" size="x-small"></lightning-icon>
+                </div>
             </div>
             <div class="date-input-block">
                 <p class="label">End Date</p>
-                <input type="date" class="date-input" placeholder="End Date" />
+                <div class="date-input">
+                    <p>Jul 24, 2024</p>
+                    <lightning-icon icon-name="utility:event" size="x-small"></lightning-icon>
+                </div>
             </div>
         </div>
     </div>
