--- a/force-app/main/default/lwc/travelersPeople/travelersPeople.html
+++ b/force-app/main/default/lwc/travelersPeople/travelersPeople.html
@@ -89,7 +89,7 @@
     <div class="footer-section">
         <button class="find-btn">
             <lightning-icon icon-name="utility:sparkles" size="small"></lightning-icon>
-            <span>Find me the best match with AI</span>
+            <span>Find me the best match</span>
         </button>
     </div>
 </template>
